--- a/Main.storyboard
+++ b/Main.storyboard
@@ -1010,7 +1010,7 @@
                                 </constraints>
                                 <state key="normal" title="隐私条款&gt;"/>
                                 <connections>
-                                    <segue destination="JfC-rS-uO9" kind="show" id="RuD-VM-YHR"/>
+                                    <segue destination="ed9-WY-c8R" kind="show" id="S2r-93-q8d"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -1087,7 +1087,7 @@
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cOd-rp-PL1">
                                         <rect key="frame" x="16" y="0.0" width="382" height="736"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <mutableString key="text">请仔细阅读以下条款。
+                                        <string key="text">请仔细阅读以下条款。
 
 订阅
 
@@ -1111,7 +1111,7 @@
 
 联系我们
 
-如果您对该服务还有任何疑问，请随时联系我们。</mutableString>
+如果您对该服务还有任何疑问，请随时联系我们。</string>
                                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                     </textView>
@@ -3591,39 +3591,17 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="L6h-77-rLX">
+                            <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="d4r-Pg-r5B">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
-                                <subviews>
-                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gES-QT-g62">
-                                        <rect key="frame" x="16" y="0.0" width="382" height="736"/>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <string key="text">《论坛》尊重并保护您的个人隐私。本隐私策略解释我们会手机您的那些信息以及原因，以及我们会如何利用和保护这些信息。
-
-《论坛》会收集我的哪些信息？
-设备ID，只是为了统计活跃度，以及发送推送
-《论坛》如何保护我的隐私？
-所有数据都通过HTTPS进行传输，并保存在LeanCloud上
-不收集Cookies，用户名密码等敏感信息，保证用户安全</string>
-                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                                    </textView>
-                                </subviews>
-                                <constraints>
-                                    <constraint firstItem="gES-QT-g62" firstAttribute="height" secondItem="L6h-77-rLX" secondAttribute="height" id="0oK-Tx-fey"/>
-                                    <constraint firstItem="gES-QT-g62" firstAttribute="leading" secondItem="L6h-77-rLX" secondAttribute="leading" constant="16" id="1lc-kV-4A7"/>
-                                    <constraint firstItem="gES-QT-g62" firstAttribute="top" secondItem="L6h-77-rLX" secondAttribute="top" id="D79-cS-wcU"/>
-                                    <constraint firstAttribute="trailing" secondItem="gES-QT-g62" secondAttribute="trailing" constant="-16" id="GXA-bw-AzI"/>
-                                    <constraint firstAttribute="bottom" secondItem="gES-QT-g62" secondAttribute="bottom" id="cFR-Va-JiQ"/>
-                                    <constraint firstItem="gES-QT-g62" firstAttribute="centerX" secondItem="L6h-77-rLX" secondAttribute="centerX" id="nAA-cA-mfR"/>
-                                </constraints>
-                            </scrollView>
+                                <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </webView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="L6h-77-rLX" firstAttribute="width" secondItem="vML-9d-xZp" secondAttribute="width" id="Iwg-Am-DVB"/>
-                            <constraint firstItem="L6h-77-rLX" firstAttribute="height" secondItem="vML-9d-xZp" secondAttribute="height" id="MMw-rd-KUT"/>
-                            <constraint firstItem="L6h-77-rLX" firstAttribute="centerY" secondItem="vML-9d-xZp" secondAttribute="centerY" id="OXW-s0-Sfi"/>
-                            <constraint firstItem="L6h-77-rLX" firstAttribute="centerX" secondItem="vML-9d-xZp" secondAttribute="centerX" id="tb6-eU-CxN"/>
+                            <constraint firstItem="d4r-Pg-r5B" firstAttribute="width" secondItem="vML-9d-xZp" secondAttribute="width" id="Xp1-vI-xqp"/>
+                            <constraint firstItem="d4r-Pg-r5B" firstAttribute="height" secondItem="vML-9d-xZp" secondAttribute="height" id="ZnQ-et-v2Y"/>
+                            <constraint firstItem="d4r-Pg-r5B" firstAttribute="centerX" secondItem="vML-9d-xZp" secondAttribute="centerX" id="mqA-HC-GHm"/>
+                            <constraint firstItem="d4r-Pg-r5B" firstAttribute="centerY" secondItem="vML-9d-xZp" secondAttribute="centerY" id="wBZ-QV-B6F"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="隐私条款" id="lpx-qe-ZMy" userLabel="隐私条款">
@@ -3637,7 +3615,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Yiq-mF-kz2" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2945" y="2222"/>
+            <point key="canvasLocation" x="-2946.376811594203" y="2221.467391304348"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="JDP-vM-x1t">
@@ -3671,6 +3649,54 @@
             </objects>
             <point key="canvasLocation" x="-1438" y="1317"/>
         </scene>
+        <!--隐私条款-->
+        <scene sceneID="C14-6Z-bGy">
+            <objects>
+                <viewController id="ed9-WY-c8R" customClass="ForumShowPrivatePolicyUiViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="iOR-ec-W7h"/>
+                        <viewControllerLayoutGuide type="bottom" id="ZOy-EK-oHv"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="aXG-Sf-K50">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mHD-C1-gfE">
+                                <rect key="frame" x="0.0" y="64" width="414" height="672"/>
+                                <color key="backgroundColor" red="0.28958413" green="0.31462949509999999" blue="0.32950475810000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </webView>
+                        </subviews>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="mHD-C1-gfE" firstAttribute="top" secondItem="iOR-ec-W7h" secondAttribute="bottom" id="1hT-Wy-FVh"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="mHD-C1-gfE" secondAttribute="trailing" constant="-20" id="gWN-x7-d29"/>
+                            <constraint firstItem="mHD-C1-gfE" firstAttribute="leading" secondItem="aXG-Sf-K50" secondAttribute="leadingMargin" constant="-20" id="iZl-PB-YiG"/>
+                            <constraint firstItem="mHD-C1-gfE" firstAttribute="centerX" secondItem="aXG-Sf-K50" secondAttribute="centerX" id="rcg-KR-mev"/>
+                            <constraint firstItem="ZOy-EK-oHv" firstAttribute="top" secondItem="mHD-C1-gfE" secondAttribute="bottom" id="v6a-ay-oI0"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="隐私条款" id="90y-oV-aO9">
+                        <barButtonItem key="leftBarButtonItem" image="ic_arrow_back_18pt" id="Bju-TK-la3">
+                            <color key="tintColor" cocoaTouchSystemColor="darkTextColor"/>
+                            <connections>
+                                <action selector="close:" destination="ed9-WY-c8R" id="f9O-s8-3Xb"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" title="回复" id="rPU-T6-FO5">
+                            <color key="tintColor" red="0.95026940110000002" green="0.95026940110000002" blue="0.95026940110000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <connections>
+                                <action selector="replyPM:" destination="ed9-WY-c8R" id="QTg-Dx-cFw"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="webView" destination="mHD-C1-gfE" id="MB2-lG-cID"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Zmg-gI-GFT" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-3588" y="2221"/>
+        </scene>
     </scenes>
     <resources>
         <image name="ic_account_balance_18pt" width="18" height="18"/>
@@ -3689,7 +3715,6 @@
         <image name="tab_new_post" width="18" height="18"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="RuD-VM-YHR"/>
         <segue reference="wLO-He-BF0"/>
         <segue reference="Ysv-Xy-VAF"/>
         <segue reference="FiC-V2-LqH"/>
