--- a/Main.storyboard
+++ b/Main.storyboard
@@ -1000,7 +1000,7 @@
                                 </constraints>
                                 <state key="normal" title="使用条款&gt;"/>
                                 <connections>
-                                    <segue destination="L1e-ai-WY1" kind="show" id="i72-7o-Zg0"/>
+                                    <segue destination="ed9-WY-c8R" kind="show" identifier="ShowTermsOfUse" id="BMq-sx-u0F"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BFM-wx-9JV">
@@ -1010,7 +1010,7 @@
                                 </constraints>
                                 <state key="normal" title="隐私条款&gt;"/>
                                 <connections>
-                                    <segue destination="ed9-WY-c8R" kind="show" id="S2r-93-q8d"/>
+                                    <segue destination="ed9-WY-c8R" kind="show" identifier="ShowPolicy" id="S2r-93-q8d"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -3579,60 +3579,6 @@
             </objects>
             <point key="canvasLocation" x="-6665" y="664"/>
         </scene>
-        <!--隐私条款-->
-        <scene sceneID="uxS-Do-DZd">
-            <objects>
-                <viewController title="隐私条款" id="JfC-rS-uO9" customClass="CloseViewController" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="q6F-gr-hGc"/>
-                        <viewControllerLayoutGuide type="bottom" id="Pvj-x6-Uno"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="vML-9d-xZp">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="d4r-Pg-r5B">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
-                                <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                            </webView>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <constraints>
-                            <constraint firstItem="d4r-Pg-r5B" firstAttribute="width" secondItem="vML-9d-xZp" secondAttribute="width" id="Xp1-vI-xqp"/>
-                            <constraint firstItem="d4r-Pg-r5B" firstAttribute="height" secondItem="vML-9d-xZp" secondAttribute="height" id="ZnQ-et-v2Y"/>
-                            <constraint firstItem="d4r-Pg-r5B" firstAttribute="centerX" secondItem="vML-9d-xZp" secondAttribute="centerX" id="mqA-HC-GHm"/>
-                            <constraint firstItem="d4r-Pg-r5B" firstAttribute="centerY" secondItem="vML-9d-xZp" secondAttribute="centerY" id="wBZ-QV-B6F"/>
-                        </constraints>
-                    </view>
-                    <navigationItem key="navigationItem" title="隐私条款" id="lpx-qe-ZMy" userLabel="隐私条款">
-                        <barButtonItem key="leftBarButtonItem" image="ic_arrow_back_18pt" id="g3P-Jn-wFu">
-                            <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            <connections>
-                                <action selector="close:" destination="JfC-rS-uO9" id="wVI-ca-DyR"/>
-                            </connections>
-                        </barButtonItem>
-                    </navigationItem>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Yiq-mF-kz2" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-2946.376811594203" y="2221.467391304348"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="JDP-vM-x1t">
-            <objects>
-                <navigationController id="NYR-wo-aJj" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="93P-a3-PGD">
-                        <rect key="frame" x="0.0" y="20" width="414" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <connections>
-                        <segue destination="JfC-rS-uO9" kind="relationship" relationship="rootViewController" id="Cdj-X7-sw8"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="hvo-VO-s3j" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-1955" y="2239"/>
-        </scene>
         <!--Navigation Controller-->
         <scene sceneID="bgE-Lk-Pxg">
             <objects>
@@ -3682,12 +3628,6 @@
                                 <action selector="close:" destination="ed9-WY-c8R" id="f9O-s8-3Xb"/>
                             </connections>
                         </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" title="回复" id="rPU-T6-FO5">
-                            <color key="tintColor" red="0.95026940110000002" green="0.95026940110000002" blue="0.95026940110000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                            <connections>
-                                <action selector="replyPM:" destination="ed9-WY-c8R" id="QTg-Dx-cFw"/>
-                            </connections>
-                        </barButtonItem>
                     </navigationItem>
                     <connections>
                         <outlet property="webView" destination="mHD-C1-gfE" id="MB2-lG-cID"/>
@@ -3715,10 +3655,10 @@
         <image name="tab_new_post" width="18" height="18"/>
     </resources>
     <inferredMetricsTieBreakers>
+        <segue reference="BMq-sx-u0F"/>
         <segue reference="wLO-He-BF0"/>
         <segue reference="Ysv-Xy-VAF"/>
         <segue reference="FiC-V2-LqH"/>
-        <segue reference="i72-7o-Zg0"/>
         <segue reference="UB6-76-MCr"/>
         <segue reference="tJd-yI-EGE"/>
         <segue reference="BtX-d5-2Dd"/>
