--- a/Main.storyboard
+++ b/Main.storyboard
@@ -3471,6 +3471,9 @@
                                                 <constraint firstItem="UtI-D0-RUY" firstAttribute="centerY" secondItem="FTZ-Ii-vZB" secondAttribute="centerY" id="c4r-dP-hdB"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="ed9-WY-c8R" kind="show" identifier="ShowMore" id="FlV-TR-zUJ"/>
+                                        </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" rowHeight="44" id="sFD-cJ-9JF" customClass="BaseFourmTableViewCell">
                                         <rect key="frame" x="0.0" y="133" width="414" height="44"/>
@@ -3581,9 +3584,6 @@
                                 <action selector="close:" destination="pEl-o7-5XO" id="mfS-I5-5nY"/>
                             </connections>
                         </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" title="订阅" id="E1e-ZE-X0H">
-                            <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        </barButtonItem>
                     </navigationItem>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                 </tableViewController>
@@ -3609,7 +3609,7 @@
         <image name="tab_new_post" width="18" height="18"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="fzn-Te-kIx"/>
+        <segue reference="FlV-TR-zUJ"/>
         <segue reference="wLO-He-BF0"/>
         <segue reference="Ysv-Xy-VAF"/>
         <segue reference="FiC-V2-LqH"/>
